--- a/samples/opensource/CMakeLists.txt
+++ b/samples/opensource/CMakeLists.txt
@@ -37,6 +37,7 @@ set(OPENSOURCE_SAMPLES_LIST
     sampleUffPluginV2Ext
     sampleUffSSD
     sampleOnnxMnistCoordConvAC
+    sampleMnistMySelu
     trtexec
 )
 
